# dyn_sized

./: CHANGELOG.md  Cargo.toml
src/: lib.rs
tests/: macro_test.rs  unsized_struct_test.rs
