[package]
name = "dyn_sized"
version = "0.1.0"
authors = ["Michael Hewson <michael@michaelhewson.ca>"]
description = "Provides the `DynSized` trait, for working with dynamically sized types"
repository = "https://github.com/mikeyhew/dyn_sized"
license = "MIT/Apache-2.0"

[dependencies]
fn_move = "^0.1"
